<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <include layout="@layout/title"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <LinearLayout
        android:id="@+id/linear_vert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_username"></TextView>

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textview_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_password"></TextView>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_vert"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_clear"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/left_button"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_login"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/right_button"/>
    </LinearLayout>


</RelativeLayout>