<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/holiday_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/outliner"
        android:padding="10dip">

        <TextView
            android:id="@+id/text_holiday_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holiday_request_text"
            android:textSize="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/holiday_box"
            android:orientation="horizontal">

            <EditText
                android:inputType="date"
                android:id="@+id/edittext_date_from"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_from"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/left_button"/>

            <EditText
                android:inputType="date"
                android:id="@+id/edittext_date_to"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_to"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/right_button"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>